2007-12-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.h: Rearrange declarations.

	* clutter/clutter-score.c: More documentation in the long
	description of the ClutterScore section.

	* clutter/clutter-debug.h:
	* clutter/clutter-main.c: Add the CLUTTER_DEBUG_SHADER flag,
	for debugging the shader calls.

	* clutter/clutter-feature.h: Fix the documentation of the
	feature flags.

	* clutter/Makefile.am: Remove trailing whitespace.

2007-12-05  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* tests/Makefile.am:
	* tests/test-unproject:
	(clutter_actor_transform_stage_point):
	Added new function for translating stage coordinates into local
	actor coordinates.

2007-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.c: Better document ClutterScore
	and its API.

2007-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.[ch]: Reimplement ClutterScore using
	a N-ary tree to store the timelines. Remove clutter_score_add():
	the same functionality can be achieved by passing a NULL
	parent to clutter_score_append().

	* tests/test-score.c: Update ClutterScore test unit, and add
	debug printouts.

2007-12-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-shader.c: (bind_glsl_shader): use gchar instead of
	GLcharARB.

2007-12-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-shader.[ch]: do not include GL.h.

2007-12-03  Øyvind Kolås  <pippin@o-hand.com>

	Support for shaders in clutter. At the moment limited to drivers
	providing GLSL support.

	* clutter/cogl/cogl.h: added rather direct binding of needed for glsl
	shaders.
	* clutter/cogl/gl/cogl-defines.h.in:
	* clutter/cogl/gl/cogl.c:
	* clutter/cogl/gles/cogl-defines.h: added stubs.
	* clutter/cogl/gles/cogl.c: added stubs.

	* clutter/glx/clutter-stage-glx.c:
	(clutter_stage_glx_realize): unrelated memory management sanity fix.